[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/thrusters-loop.wav" type="AudioStream" id=2]




[node name="HUD" type="HBoxContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetSpeedTitle" type="Label" parent="."]
margin_right = 84.0
margin_bottom = 14.0
text = "Acceleration:"

[node name="Acceleration" type="Label" parent="."]
margin_left = 88.0
margin_right = 96.0
margin_bottom = 14.0
text = "0"

[node name="SpeedTitle" type="Label" parent="."]
margin_left = 100.0
margin_right = 143.0
margin_bottom = 14.0
text = "Speed:"

[node name="Speed" type="Label" parent="."]
margin_left = 147.0
margin_right = 155.0
margin_bottom = 14.0
text = "0"

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 159.0
margin_right = 259.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
value = 10.0

[node name="ThrustSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0

[node name="FadeIn" type="Tween" parent="."]

[node name="FadeOut" type="Tween" parent="."]

[node name="Pitch" type="Tween" parent="."]
[connection signal="tween_completed" from="FadeOut" to="." method="_on_FadeOut_tween_completed"]
